--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/ui": "^4.2",
         "laravelcollective/html": "^6.4",
         "mckenziearts/laravel-notify": "^2.4",
-        "spatie/laravel-permission": "^5.10"
+        "spatie/laravel-permission": "^5.10",
+        "twilio/sdk": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
